Make recaptcha removable.

--- a/app/assets/templates/listings/show/phone_recaptcha.jst.ejs
+++ b/app/assets/templates/listings/show/phone_recaptcha.jst.ejs
@@ -1,4 +1,4 @@
-
+<span class="remove">&times;</span>
 <div id="recaptcha_widget" class="clear-fix">
    <div class="recaptcha-widget-main">
      <div id="recaptcha_image"></div>
