--- a/app/assets/stylesheets/recaptcha.css.scss
+++ b/app/assets/stylesheets/recaptcha.css.scss
@@ -11,7 +11,7 @@ form.phone {
   width: 270px;
   text-indent: 0;
   position: relative;
-  z-index: 10;
+  z-index: 1;
 }
 
 form.phone.show {
@@ -94,4 +94,16 @@ form.phone .spinner {
 
 form.phone.busy .spinner {
   display: block;
+}
+
+form.phone .remove {
+  position: absolute;
+  display: block;
+  color: white;
+  background-color: #333333;
+  border-radius: 50%;
+  width: auto;
+  top: -10px;
+  right: -8px;
+  padding: 0 6px;
 }
