Limit sort by best deal to < 100 listings.

--- a/app/assets/templates/listings/index/search_form.jst.ejs
+++ b/app/assets/templates/listings/index/search_form.jst.ejs
@@ -36,7 +36,7 @@
         <option value="<%= make.id %>"
           <% var makeId = parseInt(make.id); %>
           <%= (searchMakeId === makeId) ? 'selected' : '' %>>
-          <%= make.escape('name') %>
+          <%= make.get('name') %>
         </option>
         <% }); %>
       </select>
