--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -10,7 +10,8 @@
     "years": <%= @years.to_json %>,
     "sortOptions": <%= Listing::SORT_OPTIONS.to_json.html_safe %>,
     "RECAPTCHA_PUBLIC_KEY": "<%= ENV['RECAPTCHA_PUBLIC_KEY'] %>",
-    "spinnerURL": "<%= asset_path('spinner.gif') %>"
+    "spinnerURL": "<%= asset_path('spinner.gif') %>",
+    "MAX_FOR_BEST_DEAL_SORT": <%= Listing::MAX_FOR_BEST_DEAL_SORT %>
   }
 </script>
 <% end %>
