--- a/app/assets/stylesheets/lightbox.css.scss
+++ b/app/assets/stylesheets/lightbox.css.scss
@@ -26,7 +26,7 @@
   left: 50%;
   margin: 100px auto 100px -330px;
   background: white;
-  border: 10px solid black;
+  border: 10px solid #333333;
 }
 
 #lightbox article h1 {
@@ -53,7 +53,7 @@
   max-width: 500px;
   max-height: 500px;
   margin: 20px auto;
-  border: 10px solid black;
+  border: 10px solid #333333;
 }
 
 #lightbox .thumbs {
@@ -64,7 +64,7 @@
   width: 50px;
   height: 50px;
   float: left;
-  border: 4px solid black;
+  border: 4px solid #333333;
   overflow: hidden;
   position: relative;
   margin: 0 4px;
@@ -96,6 +96,37 @@
   font-weight: bold;
 }
 
+#lightbox .exit-lightbox .tooltip {
+  display: none;
+  position: absolute;
+  padding: 5px;
+  background-color: #333333;
+  color: white;
+  font-size: 13px;
+  width: 105px;
+  height: 18px;
+  top: 7px;
+  left: -150px;
+  white-space: nowrap;
+}
+
+#lightbox .exit-lightbox > .tooltip > .triangle {
+  display: block;
+  position: absolute;
+  right: -14px;
+  top: 0;
+  width: 0;
+  height: 0;
+  border-right: 0;
+  border-top: 14px solid transparent;
+  border-bottom: 14px solid transparent;
+  border-left: 14px solid #333333;
+}
+
 #lightbox .exit-lightbox:hover {
   color: #000;
 }
+
+#lightbox .exit-lightbox:hover .tooltip {
+  display: block;
+};
