Faster clippy and add pushState.

--- a/app/assets/templates/listings/show/container.jst.ejs
+++ b/app/assets/templates/listings/show/container.jst.ejs
@@ -47,7 +47,7 @@
 
         <dt>Seller</dt>
         <dd>
-          <a href="#/users/<%= listing.seller().id %>">
+          <a href="users/<%= listing.seller().id %>">
             <% if (listing.byOwner()) { %>
               BY OWNER
             <% } else { %>
