--- a/app/assets/templates/listings/list_item.jst.ejs
+++ b/app/assets/templates/listings/list_item.jst.ejs
@@ -24,7 +24,7 @@
 
 <hgroup class="listing-info">
   <h3 class="line clear-fix">
-    <a href="#/listings/<%= listing.id %>" class="listing-show">
+    <a href="listings/<%= listing.id %>" class="listing-show">
       <%= listing.get('ymm') %>
     </a>
     <div class="price">
