--- a/app/assets/templates/pics/index.jst.ejs
+++ b/app/assets/templates/pics/index.jst.ejs
@@ -7,7 +7,7 @@
     </span>
   </span>
 
-  <h1><a href="#/listings/<%= listing.id %>"><%= listing.get('ymm') %></a></h1>
+  <h1><a href="listings/<%= listing.id %>"><%= listing.get('ymm') %></a></h1>
 
   <% var featuredPic = listing.pics().get(selectedPicID); %>
   <% if (featuredPic) { %>
