Move backbone kickoff stuff into partial to move into serving html snapshots.

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,28 +1,1 @@
-<% content_for :head_js do %>
- <script type="text/javascript" src="http://www.google.com/recaptcha/api/js/recaptcha_ajax.js">
- </script>
-<% end %>
-
-<% cache(expires_in: 10.minutes, race_condition_ttl: 10.seconds) do %>
-<script type="application/json" id="bootstrapped-data">
-  {"listingsData": <%= @listings_json.html_safe %>,
-   "subdivisions": <%= @subdivisions_json.html_safe %>,
-    "years": <%= @years.to_json %>,
-    "sortOptions": <%= Listing::SORT_OPTIONS.to_json.html_safe %>,
-    "RECAPTCHA_PUBLIC_KEY": "<%= ENV['RECAPTCHA_PUBLIC_KEY'] %>",
-    "spinnerURL": "<%= asset_path('spinner.gif') %>",
-    "maxCountForBestDealSort": <%= Listing::MAX_FOR_BEST_DEAL_SORT %>
-  }
-</script>
-<% end %>
-
-<script>
-  $(document).ready(function(){
-    var bootstrappedData = JSON.parse($('#bootstrapped-data').html());
-    CarListing.initialize({
-      searchParams: <%= @search_params.to_json.html_safe %>,
-      currentUserID: <%= current_user.try(:id) || 'null' %>,
-      bootstrappedData: bootstrappedData
-    });
-  });
-</script>
+<%= render partial: 'shared/backbone_kickoff' %>
