--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,1 +1,12 @@
-<%= render partial: 'shared/backbone_kickoff' %>
+<div>
+
+  <section id="sidebar">
+    <form class="search">
+      <%= render partial: 'search_form' %>
+    </form>
+  </section>
+
+  <section id="main-content" class="clear-fix"></section>
+
+</div>
+<%= render partial: 'shared/backbone_kickoff.html.erb' %>
