--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -6,7 +6,11 @@
     </form>
   </section>
 
-  <section id="main-content" class="clear-fix"></section>
+  <section id="main-content" class="clear-fix">
+    <%= render partial: 'search_results' %>
+  </section>
 
 </div>
+
+
 <%= render partial: 'shared/backbone_kickoff.html.erb' %>
