--- a/app/views/listings/_listing.html.erb
+++ b/app/views/listings/_listing.html.erb
@@ -14,7 +14,7 @@
   </div>
 
   <div class="thumb-container">
-    <a class="thumb" href="<%= root_url %>#/listings/<%= listing.id %>">
+    <a class="thumb" href="/listings/<%= listing.id %>">
       <% if !listing.pics.empty? %>
         <img src="<%= listing.pics.first.file.url %>">
       <% else %>
@@ -25,16 +25,24 @@
 
   <hgroup class="listing-info">
     <h3 class="line clear-fix">
-      <a href="<%= root_url %>#/listings/<%= listing.id %>" class="listing-show">
+      <a href="/listings/<%= listing.id %>" class="listing-show">
         <%= listing.ymm %>
       </a>
-      <div class="price"><%= number_to_currency(listing.price, precision: 0) %>
+      <div class="price">
+        <% if listing.respond_to?(:deal_ratio) %>
+          <% deal_ratio = (listing.deal_ratio.to_f * 100).to_i %>
+          <% if deal_ratio > 0 %>
+          Deal: <%= deal_ratio %>%
+          <% end %>
+        <% end %>
+
+        <%= number_to_currency(listing.price, precision: 0) %>
       </div>
     </h3>
 
     <h4 class="line">
       by
-      <strong>
+      <strong class="user-written">
         <%= listing.by_owner? ? "OWNER" : "DEALER" %>:
       </strong>
       <span>"<%= listing.title.truncate(35) %>"</span>
@@ -48,6 +56,7 @@
       <div class="post-date">
         Posted
         <time class="timeago" datetime="<%= listing.post_date_iso8601 %>">
+          <%= time_ago_in_words(listing.created_at) %>
         </time>
       </div>
     </h4>
