Preset price in search form to previous search.

--- a/app/assets/templates/listings/index/search_form.jst.ejs
+++ b/app/assets/templates/listings/index/search_form.jst.ejs
@@ -64,7 +64,7 @@
                  pattern="[0-9]*"
                       id="search-price_from"
                maxlength="5"
-                   value="">
+                   value="<%= searchParams.price_from %>">
                    ▰
       <label for="search-price_to">$</label>
       <input placeholder="to"
@@ -73,7 +73,7 @@
                  pattern="[0-9]*"
                       id="search-price_to"
                maxlength="6"
-                   value="">
+                   value="<%= searchParams.price_to %>">
     </td>
   </tr>
   <tr>
