Prefer 'by owner'

--- a/app/assets/templates/users/profile.jst.ejs
+++ b/app/assets/templates/users/profile.jst.ejs
@@ -32,7 +32,7 @@
 
   <% } else { %>
     <dt>Seller type</dt>
-    <dd>PRIVATE SELLER</dd>
+    <dd>BY OWNER</dd>
 
     <% if (user.get('location')) { %>
     <dt>Location</dt>
