Dashboard nav integration.

--- a/app/assets/templates/users/dashboard.jst.ejs
+++ b/app/assets/templates/users/dashboard.jst.ejs
@@ -5,7 +5,7 @@
 
 <section id="sidebar">
   <header><h3>Links</h3></header>
-  <a href="/listings/new">Sell a car!</a>
+  <a href="<%= window.location.origin %>/listings/new">Sell a car!</a>
 </section>
 
 <section id="main-content">
