--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -2,11 +2,11 @@
   <section id="sidebar">
     <form class="search">
     <% if search_params_present? %>
-      <%= render partial: 'search_form' %>
+      <%= render partial: 'listings/search_form' %>
     <% else %>
 
       <% cache('search_form', expires_in: 10.minutes, race_condition_ttl: 10.seconds) do %>
-        <%= render partial: 'search_form' %>
+        <%= render partial: 'listings/search_form' %>
       <% end %>
 
     <% end %>
@@ -15,11 +15,11 @@
 
   <section id="main-content" class="clear-fix">
   <% if search_params_present? %>
-    <%= render partial: 'search_results' %>
+    <%= render partial: 'listings/search_results' %>
   <% else %>
 
     <% cache('search_results', expires_in: 10.minutes, race_condition_ttl: 10.seconds) do %>
-      <%= render partial: 'search_results' %>
+      <%= render partial: 'listings/search_results' %>
     <% end %>
 
   <% end %>
